--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "password-validator": "^5.3.0",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
