--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "axios": "^1.2.3",
     "bcrypt": "5.0.1",
     "bcryptjs": "^2.4.3",
+    "better-sse": "^0.8.0",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +20,9 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "password-validator": "^5.3.0",
+    "socket.io": "^4.6.1",
+    "sse": "^0.0.8",
+    "sse-express": "^1.0.2",
     "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
